import { describe, it, expect } from 'vitest';
import { formatReleaseNotes } from '../../src/core/formatter.js';
import { buildTemplateContext } from '../../src/core/template-engine.js';
import type { ReleaseNotesData, ReleaseJetConfig } from '../../src/types.js';

const defaultConfig: ReleaseJetConfig = {
  provider: { type: 'gitlab', url: 'https://gitlab.example.com' },
  source: 'issues',
  clients: [{ prefix: 'mobile', label: 'MOBILE' }],
  categories: {
    feature: 'New Features',
    bug: 'Bug Fixes',
    improvement: 'Improvements',
    'breaking-change': 'Breaking Changes',
  },
  uncategorized: 'lenient',
};

describe('formatReleaseNotes', () => {
  it('formats multi-client release with all sections', () => {
    const data: ReleaseNotesData = {
      tagName: 'mobile-v0.1.17',
      version: '0.1.17',
      clientPrefix: 'mobile',
      date: '2026-04-08',
      milestone: { title: '[MOBILE] Demo 1', url: 'https://gitlab.example.com/mobile/app/-/milestones/1' },
      projectUrl: 'https://gitlab.example.com/mobile/app',
      issues: {
        categorized: {
          'New Features': [
            { number:142, title: 'Dark mode support', labels: ['feature', 'MOBILE'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
            { number:137, title: 'Export as PDF', labels: ['feature', 'MOBILE'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
          ],
          'Bug Fixes': [
            { number:155, title: 'Login redirect loop', labels: ['bug', 'MOBILE'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
          ],
        },
        uncategorized: [
          { number:151, title: 'Update dependencies', labels: ['MOBILE'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
        ],
      },
      totalCount: 4,
      uncategorizedCount: 1,
      contributors: [],
    };

    const result = formatReleaseNotes(data, defaultConfig);

    expect(result).toContain('## MOBILE v0.1.17');
    expect(result).toContain('**Released:** 2026-04-08 | **Tag:** [mobile-v0.1.17](https://gitlab.example.com/mobile/app/-/tags/mobile-v0.1.17) | **Milestone:** [[MOBILE] Demo 1](https://gitlab.example.com/mobile/app/-/milestones/1) | **Issues:** 4 closed | 1 uncategorized');
    expect(result).toContain('#### New Features');
    expect(result).toContain('- Dark mode support (#142)');
    expect(result).toContain('- Export as PDF (#137)');
    expect(result).toContain('#### Bug Fixes');
    expect(result).toContain('- Login redirect loop (#155)');
    expect(result).toContain('#### Other');
    expect(result).toContain('- Update dependencies (#151)');
    expect(result).toContain('*Generated by [ReleaseJet]');
  });

  it('formats single-client release without prefix in title', () => {
    const data: ReleaseNotesData = {
      tagName: 'v1.0.0',
      version: '1.0.0',
      clientPrefix: null,
      date: '2026-04-08',
      milestone: null,
      projectUrl: 'https://gitlab.example.com/mobile/app',
      issues: {
        categorized: {
          'Bug Fixes': [
            { number:10, title: 'Fix crash', labels: ['bug'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
          ],
        },
        uncategorized: [],
      },
      totalCount: 1,
      uncategorizedCount: 0,
      contributors: [],
    };

    const result = formatReleaseNotes(data, defaultConfig);

    expect(result).toContain('## v1.0.0');
    expect(result).not.toContain('**Milestone:**');
    expect(result).toContain('**Issues:** 1 closed');
    expect(result).not.toContain('uncategorized');
  });

  it('omits empty category sections', () => {
    const data: ReleaseNotesData = {
      tagName: 'v1.0.0',
      version: '1.0.0',
      clientPrefix: null,
      date: '2026-04-08',
      milestone: null,
      projectUrl: 'https://gitlab.example.com/mobile/app',
      issues: {
        categorized: {
          'Bug Fixes': [
            { number:10, title: 'Fix crash', labels: ['bug'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
          ],
        },
        uncategorized: [],
      },
      totalCount: 1,
      uncategorizedCount: 0,
      contributors: [],
    };

    const result = formatReleaseNotes(data, defaultConfig);

    expect(result).toContain('#### Bug Fixes');
    expect(result).not.toContain('### New Features');
    expect(result).not.toContain('#### Improvements');
    expect(result).not.toContain('#### Breaking Changes');
    expect(result).not.toContain('#### Other');
  });

  it('preserves category order from config', () => {
    const data: ReleaseNotesData = {
      tagName: 'v1.0.0',
      version: '1.0.0',
      clientPrefix: null,
      date: '2026-04-08',
      milestone: null,
      projectUrl: 'https://gitlab.example.com/mobile/app',
      issues: {
        categorized: {
          'Bug Fixes': [
            { number:2, title: 'Bug', labels: ['bug'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
          ],
          'New Features': [
            { number:1, title: 'Feature', labels: ['feature'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
          ],
        },
        uncategorized: [],
      },
      totalCount: 2,
      uncategorizedCount: 0,
      contributors: [],
    };

    const result = formatReleaseNotes(data, defaultConfig);
    const featureIdx = result.indexOf('#### New Features');
    const bugIdx = result.indexOf('#### Bug Fixes');
    expect(featureIdx).toBeLessThan(bugIdx);
  });

  it('does not render "Other" section in strict mode', () => {
    const strictConfig: ReleaseJetConfig = { ...defaultConfig, uncategorized: 'strict' };
    const data: ReleaseNotesData = {
      tagName: 'v1.0.0',
      version: '1.0.0',
      clientPrefix: null,
      date: '2026-04-08',
      milestone: null,
      projectUrl: 'https://gitlab.example.com/mobile/app',
      issues: {
        categorized: {
          'New Features': [
            { number:1, title: 'Feature', labels: ['feature'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
          ],
        },
        uncategorized: [
          { number:2, title: 'Unlabeled', labels: [], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
        ],
      },
      totalCount: 2,
      uncategorizedCount: 1,
      contributors: [],
    };

    const result = formatReleaseNotes(data, strictConfig);
    expect(result).not.toContain('#### Other');
    expect(result).not.toContain('Unlabeled');
  });

  it('renders contributors section when contributors are present', () => {
    const data: ReleaseNotesData = {
      tagName: 'v1.0.0',
      version: '1.0.0',
      clientPrefix: null,
      date: '2026-04-13',
      milestone: null,
      projectUrl: 'https://github.com/owner/repo',
      issues: {
        categorized: {
          'New Features': [
            { number: 1, title: 'Feature', labels: ['feature'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
          ],
        },
        uncategorized: [],
      },
      totalCount: 1,
      uncategorizedCount: 0,
      contributors: [
        { username: 'elena', profileUrl: 'https://github.com/elena' },
        { username: 'makisp', profileUrl: 'https://github.com/makisp' },
        { username: 'nikos', profileUrl: 'https://github.com/nikos' },
      ],
    };

    const result = formatReleaseNotes(data, defaultConfig);

    expect(result).toContain('#### Contributors');
    expect(result).toContain('[@elena](https://github.com/elena)');
    expect(result).toContain('[@makisp](https://github.com/makisp)');
    expect(result).toContain('[@nikos](https://github.com/nikos)');
    // Contributors should appear before the footer
    const contributorsIdx = result.indexOf('#### Contributors');
    const footerIdx = result.indexOf('*Generated by');
    expect(contributorsIdx).toBeLessThan(footerIdx);
  });

  it('omits contributors section when contributors list is empty', () => {
    const data: ReleaseNotesData = {
      tagName: 'v1.0.0',
      version: '1.0.0',
      clientPrefix: null,
      date: '2026-04-13',
      milestone: null,
      projectUrl: 'https://github.com/owner/repo',
      issues: {
        categorized: {
          'New Features': [
            { number: 1, title: 'Feature', labels: ['feature'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
          ],
        },
        uncategorized: [],
      },
      totalCount: 1,
      uncategorizedCount: 0,
      contributors: [],
    };

    const result = formatReleaseNotes(data, defaultConfig);

    expect(result).not.toContain('#### Contributors');
  });

  it('uses GitHub tag URL pattern when provider is github', () => {
    const githubConfig: ReleaseJetConfig = {
      provider: { type: 'github', url: 'https://github.com' },
      source: 'issues',
      clients: [],
      categories: {
        feature: 'New Features',
      },
      uncategorized: 'lenient',
    };

    const data: ReleaseNotesData = {
      tagName: 'v1.0.0',
      version: '1.0.0',
      clientPrefix: null,
      date: '2026-04-08',
      milestone: null,
      projectUrl: 'https://github.com/owner/repo',
      issues: {
        categorized: {
          'New Features': [
            { number: 10, title: 'New feature', labels: ['feature'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
          ],
        },
        uncategorized: [],
      },
      totalCount: 1,
      uncategorizedCount: 0,
      contributors: [],
    };

    const result = formatReleaseNotes(data, githubConfig);

    expect(result).toContain('**Tag:** [v1.0.0](https://github.com/owner/repo/releases/tag/v1.0.0)');
    expect(result).not.toContain('/-/tags/');
  });
});

describe('buildTemplateContext', () => {
  it('builds issue URLs for GitHub issues', () => {
    const config: ReleaseJetConfig = {
      provider: { type: 'github', url: 'https://github.com' },
      source: 'issues',
      clients: [],
      categories: { feature: 'New Features' },
      uncategorized: 'lenient',
    };
    const data: ReleaseNotesData = {
      tagName: 'v1.0.0',
      version: '1.0.0',
      clientPrefix: null,
      date: '2026-04-14',
      milestone: null,
      projectUrl: 'https://github.com/owner/repo',
      issues: {
        categorized: {
          'New Features': [
            { number: 42, title: 'Add dark mode', labels: ['feature'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
          ],
        },
        uncategorized: [
          { number: 99, title: 'Unlabeled issue', labels: [], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
        ],
      },
      totalCount: 2,
      uncategorizedCount: 1,
      contributors: [],
    };

    const ctx = buildTemplateContext(data, config);

    expect(ctx.categoryEntries[0].issues[0].url).toBe('https://github.com/owner/repo/issues/42');
    expect(ctx.uncategorizedEntries[0].url).toBe('https://github.com/owner/repo/issues/99');
  });

  it('builds issue URLs for GitLab issues', () => {
    const config: ReleaseJetConfig = {
      provider: { type: 'gitlab', url: 'https://gitlab.example.com' },
      source: 'issues',
      clients: [],
      categories: { feature: 'New Features' },
      uncategorized: 'lenient',
    };
    const data: ReleaseNotesData = {
      tagName: 'v1.0.0',
      version: '1.0.0',
      clientPrefix: null,
      date: '2026-04-14',
      milestone: null,
      projectUrl: 'https://gitlab.example.com/group/project',
      issues: {
        categorized: {
          'New Features': [
            { number: 42, title: 'Add dark mode', labels: ['feature'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
          ],
        },
        uncategorized: [],
      },
      totalCount: 1,
      uncategorizedCount: 0,
      contributors: [],
    };

    const ctx = buildTemplateContext(data, config);

    expect(ctx.categoryEntries[0].issues[0].url).toBe('https://gitlab.example.com/group/project/-/issues/42');
  });

  it('builds PR URLs for GitHub pull_requests source', () => {
    const config: ReleaseJetConfig = {
      provider: { type: 'github', url: 'https://github.com' },
      source: 'pull_requests',
      clients: [],
      categories: { feature: 'New Features' },
      uncategorized: 'lenient',
    };
    const data: ReleaseNotesData = {
      tagName: 'v1.0.0',
      version: '1.0.0',
      clientPrefix: null,
      date: '2026-04-14',
      milestone: null,
      projectUrl: 'https://github.com/owner/repo',
      issues: {
        categorized: {
          'New Features': [
            { number: 10, title: 'Add feature via PR', labels: ['feature'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
          ],
        },
        uncategorized: [],
      },
      totalCount: 1,
      uncategorizedCount: 0,
      contributors: [],
    };

    const ctx = buildTemplateContext(data, config);

    expect(ctx.categoryEntries[0].issues[0].url).toBe('https://github.com/owner/repo/pull/10');
  });

  it('builds MR URLs for GitLab pull_requests source', () => {
    const config: ReleaseJetConfig = {
      provider: { type: 'gitlab', url: 'https://gitlab.example.com' },
      source: 'pull_requests',
      clients: [],
      categories: { feature: 'New Features' },
      uncategorized: 'lenient',
    };
    const data: ReleaseNotesData = {
      tagName: 'v1.0.0',
      version: '1.0.0',
      clientPrefix: null,
      date: '2026-04-14',
      milestone: null,
      projectUrl: 'https://gitlab.example.com/group/project',
      issues: {
        categorized: {
          'New Features': [
            { number: 10, title: 'Add feature via MR', labels: ['feature'], closedAt: '', webUrl: '', milestone: null, author: null, assignee: null, closedBy: null },
          ],
        },
        uncategorized: [],
      },
      totalCount: 1,
      uncategorizedCount: 0,
      contributors: [],
    };

    const ctx = buildTemplateContext(data, config);

    expect(ctx.categoryEntries[0].issues[0].url).toBe('https://gitlab.example.com/group/project/-/merge_requests/10');
  });
});

describe('formatReleaseNotes — description rendering (F4)', () => {
  function mkIssue(n: number, title: string, labels: string[], description?: string) {
    return {
      number: n, title, labels,
      closedAt: '', webUrl: '', milestone: null,
      author: null, assignee: null, closedBy: null,
      rawBody: description ?? null,
      description,
    };
  }

  const fixtureData: ReleaseNotesData = {
    tagName: 'v1.0.0',
    version: '1.0.0',
    clientPrefix: null,
    date: '2026-04-29',
    milestone: null,
    projectUrl: 'https://github.example.com/owner/app',
    issues: {
      categorized: {
        'New Features': [
          mkIssue(101, 'Add dark mode', ['feature'], 'Adds a dark theme toggle in user settings, persisted across sessions.'),
          mkIssue(102, 'Export as PDF', ['feature']),
        ],
        'Bug Fixes': [
          mkIssue(155, 'Fix login redirect', ['bug'], 'Users were redirected to /login instead of their target after SSO callback so the deep link was lost completely on every sign-in attempt regardless of provider…'),
        ],
      },
      uncategorized: [
        mkIssue(180, 'Bump deps', [], 'Routine dependency updates for the month.'),
      ],
    },
    totalCount: 4,
    uncategorizedCount: 1,
    contributors: [],
  };

  const githubConfig: ReleaseJetConfig = {
    provider: { type: 'github', url: 'https://github.example.com' },
    source: 'issues',
    clients: [],
    categories: {
      feature: 'New Features',
      bug: 'Bug Fixes',
    },
    uncategorized: 'lenient',
  };

  it('renders descriptions indented under bullets when populated (mixed populated + empty)', () => {
    const result = formatReleaseNotes(fixtureData, { ...githubConfig, description: 'extract' });
    expect(result).toMatchSnapshot();
  });

  it('renders no description lines when extraction is off (regression guard)', () => {
    const noDescData: ReleaseNotesData = {
      ...fixtureData,
      issues: {
        categorized: Object.fromEntries(
          Object.entries(fixtureData.issues.categorized).map(([k, v]) => [
            k, v.map(i => ({ ...i, description: undefined })),
          ]),
        ),
        uncategorized: fixtureData.issues.uncategorized.map(i => ({ ...i, description: undefined })),
      },
    };
    const result = formatReleaseNotes(noDescData, { ...githubConfig, description: 'none' });
    const lines = result.split('\n');
    for (let i = 0; i < lines.length - 1; i++) {
      if (lines[i].startsWith('- ')) {
        expect(lines[i + 1].startsWith('  - ')).toBe(false);
      }
    }
    expect(result).toMatchSnapshot();
  });
});

describe('formatReleaseNotes — jira ticket linking (F3)', () => {
  const baseConfig: ReleaseJetConfig = {
    provider: { type: 'github', url: 'https://github.com' },
    source: 'issues',
    clients: [],
    categories: { feature: 'New Features', bug: 'Bug Fixes' },
    uncategorized: 'lenient',
    jira: { baseUrl: 'https://acme.atlassian.net', projects: ['PROJ', 'BUG'] },
  };

  function makeData(): ReleaseNotesData {
    return {
      tagName: 'v1.0.0',
      version: '1.0.0',
      clientPrefix: null,
      date: '2026-04-30',
      milestone: null,
      projectUrl: 'https://github.example.com/owner/app',
      issues: {
        categorized: {
          'New Features': [
            {
              number: 101, title: 'Add dark mode', labels: ['feature'],
              closedAt: '', webUrl: '', milestone: null, author: null,
              assignee: null, closedBy: null,
              jiraTickets: ['PROJ-1'],
            },
            {
              number: 102, title: 'Export as PDF', labels: ['feature'],
              closedAt: '', webUrl: '', milestone: null, author: null,
              assignee: null, closedBy: null,
              jiraTickets: ['PROJ-2', 'BUG-9'],
            },
            {
              number: 103, title: 'No tickets here', labels: ['feature'],
              closedAt: '', webUrl: '', milestone: null, author: null,
              assignee: null, closedBy: null,
            },
          ],
        },
        uncategorized: [
          {
            number: 180, title: 'Bump deps', labels: [],
            closedAt: '', webUrl: '', milestone: null, author: null,
            assignee: null, closedBy: null,
            jiraTickets: ['BUG-42'],
          },
        ],
      },
      totalCount: 4,
      uncategorizedCount: 1,
      contributors: [],
    };
  }

  it('renders single, multiple, and absent jira links', () => {
    const result = formatReleaseNotes(makeData(), baseConfig);
    expect(result).toMatchSnapshot();
  });

  it('coexists with description: extract sub-bullets', () => {
    const data = makeData();
    data.issues.categorized['New Features'][0].description = 'Adds dark mode toggle.';
    const cfg = { ...baseConfig, description: 'extract' as const };
    const result = formatReleaseNotes(data, cfg);
    expect(result).toMatchSnapshot();
  });
});
