// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatReleaseNotes — description rendering (F4) > renders descriptions indented under bullets when populated (mixed populated + empty) 1`] = `
"## v1.0.0

**Released:** 2026-04-29 | **Tag:** [v1.0.0](https://github.example.com/owner/app/releases/tag/v1.0.0) | **Issues:** 4 closed | 1 uncategorized

---

#### New Features
- Add dark mode (#101)
  - Adds a dark theme toggle in user settings, persisted across sessions.
- Export as PDF (#102)

#### Bug Fixes
- Fix login redirect (#155)
  - Users were redirected to /login instead of their target after SSO callback so the deep link was lost completely on every sign-in attempt regardless of provider…

#### Other
- Bump deps (#180)
  - Routine dependency updates for the month.

---

*Generated by [ReleaseJet](https://github.com/makisp/releasejet)*"
`;

exports[`formatReleaseNotes — description rendering (F4) > renders no description lines when extraction is off (regression guard) 1`] = `
"## v1.0.0

**Released:** 2026-04-29 | **Tag:** [v1.0.0](https://github.example.com/owner/app/releases/tag/v1.0.0) | **Issues:** 4 closed | 1 uncategorized

---

#### New Features
- Add dark mode (#101)
- Export as PDF (#102)

#### Bug Fixes
- Fix login redirect (#155)

#### Other
- Bump deps (#180)

---

*Generated by [ReleaseJet](https://github.com/makisp/releasejet)*"
`;

exports[`formatReleaseNotes — jira ticket linking (F3) > coexists with description: extract sub-bullets 1`] = `
"## v1.0.0

**Released:** 2026-04-30 | **Tag:** [v1.0.0](https://github.example.com/owner/app/releases/tag/v1.0.0) | **Issues:** 4 closed | 1 uncategorized

---

#### New Features
- Add dark mode (#101) — [PROJ-1](https://acme.atlassian.net/browse/PROJ-1)
  - Adds dark mode toggle.
- Export as PDF (#102) — [PROJ-2](https://acme.atlassian.net/browse/PROJ-2) [BUG-9](https://acme.atlassian.net/browse/BUG-9)
- No tickets here (#103)

#### Other
- Bump deps (#180) — [BUG-42](https://acme.atlassian.net/browse/BUG-42)

---

*Generated by [ReleaseJet](https://github.com/makisp/releasejet)*"
`;

exports[`formatReleaseNotes — jira ticket linking (F3) > renders single, multiple, and absent jira links 1`] = `
"## v1.0.0

**Released:** 2026-04-30 | **Tag:** [v1.0.0](https://github.example.com/owner/app/releases/tag/v1.0.0) | **Issues:** 4 closed | 1 uncategorized

---

#### New Features
- Add dark mode (#101) — [PROJ-1](https://acme.atlassian.net/browse/PROJ-1)
- Export as PDF (#102) — [PROJ-2](https://acme.atlassian.net/browse/PROJ-2) [BUG-9](https://acme.atlassian.net/browse/BUG-9)
- No tickets here (#103)

#### Other
- Bump deps (#180) — [BUG-42](https://acme.atlassian.net/browse/BUG-42)

---

*Generated by [ReleaseJet](https://github.com/makisp/releasejet)*"
`;
